--- a/inventario-loja/frontend/tsconfig.json
+++ b/inventario-loja/frontend/tsconfig.json
@@ -1,34 +1,43 @@
-/* To learn more about Typescript configuration file: https://www.typescriptlang.org/docs/handbook/tsconfig-json.html. */
-/* To learn more about Angular compiler options: https://angular.dev/reference/configs/angular-compiler-options. */
 {
-  "compileOnSave": false,
   "compilerOptions": {
+    "baseUrl": "./", // Ou "src" se você quiser basear tudo a partir de 'src'
+    "outDir": "./dist/out-tsc",
+    "forceConsistentCasingInFileNames": true,
     "strict": true,
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
-    "skipLibCheck": true,
-    "isolatedModules": true,
+    "sourceMap": true,
+    "declaration": false,
+    "downlevelIteration": true,
     "experimentalDecorators": true,
+    "moduleResolution": "node",
     "importHelpers": true,
+    "allowSyntheticDefaultImports": true, // <-- Adicione esta linha
     "target": "ES2022",
-    "module": "preserve"
+    "module": "ES2022", // Ou "ES2020", "ESNext"
+    "useDefineForClassFields": false,
+    "lib": [
+      "ES2022",
+      "dom"
+    ]
   },
+"include": [
+  "src/**/*.ts",
+  "src/**/*.html",
+  "src/**/*.css",
+  "src/**/*.scss"
+],
+"paths": {
+  "@core/*": [
+    "src/app/core/*" // Mapeia '@core/' para a sua pasta 'src/app/core/'
+  ]
+},
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
-    "typeCheckHostBindings": true,
     "strictTemplates": true
-  },
-  "files": [],
-  "references": [
-    {
-      "path": "./tsconfig.app.json"
-    },
-    {
-      "path": "./tsconfig.spec.json"
-    }
-  ]
+  }
 }
