--- a/InventarioLoja/FrontEnd/package.json
+++ b/InventarioLoja/FrontEnd/package.json
@@ -29,6 +29,8 @@
     "@angular/platform-server": "^20.0.0",
     "@angular/router": "^20.0.0",
     "@angular/ssr": "^20.0.6",
+    "@azure/cosmos": "^4.4.1",
+    "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -47,6 +49,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "ts-node": "^10.9.2",
     "typescript": "~5.8.2"
   }
 }
