--- a/CodeByte1-backend/pom.xml
+++ b/CodeByte1-backend/pom.xml
@@ -44,6 +44,13 @@
             <version>2.8.9</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.azure</groupId>
+            <artifactId>azure-cosmos</artifactId>
+            <version>4.61.0</version>
+        </dependency>
+
+
 
     </dependencies>
 
